fixed responsive on smallest screen & logo visibility

--- a/style.css
+++ b/style.css
@@ -136,8 +136,9 @@ main {
   flex-wrap: nowrap;
 }
 
-.logo-img{
+.logo-img {
   height: 20px;
+  width: 25px;
 }
 
 #logo-name a {
@@ -271,7 +272,7 @@ main {
 
 .box {
   display: flex;
-  width: 45ch;
+  max-width: 45ch;
 }
 
 .box-content h2 {
@@ -361,4 +362,30 @@ main img {
   height: 5rem;
   width: 5rem;
   margin: 0.5rem;
+}
+
+@media (max-width: 37.5em) {
+  #logo-name span {
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 25em) {
+  #top-logo img {
+    display: none;
+  }
+  #top-logo,
+  #logo-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    margin-left: 0.5rem;
+  }
+  .box img {
+    display: none;
+  }
+  .box-content p {
+    width: auto;
+  }
 }
